# rdk-wifi

./: configure.ac  rdk_build.sh  rdk_env.xml
include/: wifi_ap_hal.h  wifi_client_hal.h  wifi_common_hal.h
src/: Makefile.am  wifi_client_hal.c  wifi_common_hal.c
test/: testwifi.c
